<resources>
    <string name="app_name">Save data via text file</string>
    <string name="save_data">Save the new entry</string>
    <string name="medium_text">Medium Text</string>
    <string name="add">Add</string>
    <string name="enter_surname">Enter surname</string>
    <string name="enter_name">Enter name</string>
    <string name="successfully_saved">Successfully saved!</string>
    <string name="file_not_found">The file does not excite!!!</string>
    <string name="reading_done">reading completed successfully</string>
</resources>