<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Edit Text for entering name -->
    <EditText
        android:id="@+id/main_et_Name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/enter_name" />

    <!-- Edit Text for entering surname -->
    <EditText
        android:id="@+id/main_et_Surname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/main_et_Name"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/enter_surname" />

    <!-- Button for adding data -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/main_btn_AddData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_et_Surname"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@color/purple_500"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <!-- Button for saving data -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/main_btn_SaveData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_btn_AddData"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@color/purple_500"
        android:text="@string/save_data"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <!-- Text View for displaying medium text -->
    <TextView
        android:id="@+id/main_tv_Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_btn_SaveData"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/medium_text" />

</RelativeLayout>